# OneDayCNN

./: CMakeLists.txt  README.md
include/: NNBase.hpp  NNFC.hpp  NNInput.hpp  NNetwork.hpp  Tensor.hpp  io.hpp
src/: NNFC.cpp  NNInput.cpp  NNetwork.cpp  Tensor.cpp  io.cpp
